--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 오디오 바: 오직 홈(index.html)에만 넣음 -->
     <div id="audio-bar">
       <audio autoplay loop>
-        <source src="music/The_Word_became_Flesh(Live, Inst.).mp3" type="audio/mpeg" />
+        <source src="music/The_Word_became_Flesh.mp3" type="audio/mpeg" />
         브라우저가 오디오를 지원하지 않습니다.
       </audio>
     </div>
